Learn/Day07/manifests/namespace-client.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-day07-client
  labels:
    environment: learning
    day: "07"
    team: client
