Learn/Day07/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-day07
  labels:
    environment: learning
    day: "07"
    team: server
