Learn/Day07/manifests/deployment-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-client
  namespace: k8s-day07-client
  labels:
    app: curl-client
    day: "07"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-client
  template:
    metadata:
      labels:
        app: curl-client
        role: client
    spec:
      containers:
        - name: curl
          image: curlimages/curl:latest
          command:
            - sh
            - -c
            - "while true; do sleep 30; done"
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
