Learn/Day07/manifests/deployment-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-server
  namespace: k8s-day07
  labels:
    app: nginx-server
    day: "07"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
        role: server
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-server
  namespace: k8s-day07
spec:
  selector:
    app: nginx-server
  ports:
    - port: 80
      targetPort: 80
