Learn/Day07/manifests/netpol-allow-client.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-namespace
  namespace: k8s-day07
  labels:
    day: "07"
spec:
  podSelector:
    matchLabels:
      app: nginx-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              team: client
      ports:
        - protocol: TCP
          port: 80
