Learn/Day07/manifests/netpol-default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: k8s-day07
  labels:
    day: "07"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
